// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic No Default Answers getConfigs 1`] = `
Array [
  Object {
    "defaultDisabled": false,
    "groups": Array [
      Object {
        "defaultDisabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question1",
            "type": "any",
            "ui": Object {
              "title": "subGroup1Questions",
            },
            "validation": Object {},
            "validators": Array [
              "notNull",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice1",
                "onSelected": Object {
                  "enable": Array [
                    "subGroup1Question3",
                  ],
                },
                "ui": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice2",
                "onSelected": Object {
                  "disable": Array [
                    "subGroup1Question4",
                  ],
                },
                "ui": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "value": "subGroup1Question2Choice3",
              },
            ],
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question2",
            "type": "single",
            "ui": Object {
              "title": "subGroup1Question2",
            },
            "validation": Object {},
            "validators": Array [
              "notNullSingle",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice1",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice2",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "value": "subGroup1Question3Choice3",
              },
            ],
            "defaultAnswer": undefined,
            "defaultDisabled": true,
            "id": "subGroup1Question3",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validation": Object {},
            "validators": Array [
              "atLeast1",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice1",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice2",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "value": "subGroup1Question4Choice3",
              },
            ],
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question4",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validation": Object {},
            "validators": Array [
              "atLeast1",
            ],
          },
        ],
        "ui": Object {},
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question1",
        "type": "any",
        "ui": Object {
          "title": "group1Questions",
        },
        "validation": Object {},
        "validators": Array [
          "notNull",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice1",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice1",
            },
            "value": "group1Question2Choice1",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice2",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice2",
            },
            "value": "group1Question2Choice2",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice3",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice3",
            },
            "value": "group1Question2Choice3",
          },
        ],
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question2",
        "type": "single",
        "ui": Object {
          "title": "group1Question2",
        },
        "validation": Object {},
        "validators": Array [
          "notNullSingle",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice1",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice1",
            },
            "value": "group1Question3Choice1",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice2",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice2",
            },
            "value": "group1Question3Choice2",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice3",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice3",
            },
            "value": "group1Question3Choice3",
          },
        ],
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question3",
        "type": "multiple",
        "ui": Object {
          "title": "group1Question3",
        },
        "validation": Object {},
        "validators": Array [],
      },
    ],
    "ui": Object {},
  },
]
`;

exports[`Basic No Default Answers getCurrentAnswers 1`] = `
Object {
  "group1Question3": Array [],
  "subGroup1Question3": Array [],
  "subGroup1Question4": Array [],
}
`;

exports[`Basic No Default Answers getErrors 1`] = `
Object {
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Basic No Default Answers getRenderInstructions 1`] = `
Array [
  Object {
    "disabled": false,
    "groups": Array [
      Object {
        "disabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "currentAnswer": undefined,
            "disabled": false,
            "error": "This field is required.",
            "id": "subGroup1Question1",
            "type": "any",
            "ui": Object {
              "title": "subGroup1Questions",
            },
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice1",
                "ui": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice2",
                "ui": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice3",
                "ui": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "value": "subGroup1Question2Choice3",
              },
            ],
            "currentAnswer": undefined,
            "disabled": false,
            "error": "Please select an option.",
            "id": "subGroup1Question2",
            "type": "single",
            "ui": Object {
              "title": "subGroup1Question2",
            },
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": true,
                "id": "subGroup1Question3Choice1",
                "ui": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "disabled": true,
                "id": "subGroup1Question3Choice2",
                "ui": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "disabled": true,
                "id": "subGroup1Question3Choice3",
                "ui": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "value": "subGroup1Question3Choice3",
              },
            ],
            "currentAnswer": Array [],
            "disabled": true,
            "error": "Please select at least 1 option.",
            "id": "subGroup1Question3",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice1",
                "ui": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice2",
                "ui": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice3",
                "ui": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "value": "subGroup1Question4Choice3",
              },
            ],
            "currentAnswer": Array [],
            "disabled": false,
            "error": "Please select at least 1 option.",
            "id": "subGroup1Question4",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validatedAnswer": undefined,
            "validating": false,
          },
        ],
        "ui": Object {},
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "currentAnswer": undefined,
        "disabled": false,
        "error": "This field is required.",
        "id": "group1Question1",
        "type": "any",
        "ui": Object {
          "title": "group1Questions",
        },
        "validatedAnswer": undefined,
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "disabled": false,
            "id": "group1Question2Choice1",
            "ui": Object {
              "title": "group1Question2Choice1",
            },
            "value": "group1Question2Choice1",
          },
          Object {
            "disabled": false,
            "id": "group1Question2Choice2",
            "ui": Object {
              "title": "group1Question2Choice2",
            },
            "value": "group1Question2Choice2",
          },
          Object {
            "disabled": false,
            "id": "group1Question2Choice3",
            "ui": Object {
              "title": "group1Question2Choice3",
            },
            "value": "group1Question2Choice3",
          },
        ],
        "currentAnswer": undefined,
        "disabled": false,
        "error": "Please select an option.",
        "id": "group1Question2",
        "type": "single",
        "ui": Object {
          "title": "group1Question2",
        },
        "validatedAnswer": undefined,
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "disabled": false,
            "id": "group1Question3Choice1",
            "ui": Object {
              "title": "group1Question3Choice1",
            },
            "value": "group1Question3Choice1",
          },
          Object {
            "disabled": false,
            "id": "group1Question3Choice2",
            "ui": Object {
              "title": "group1Question3Choice2",
            },
            "value": "group1Question3Choice2",
          },
          Object {
            "disabled": false,
            "id": "group1Question3Choice3",
            "ui": Object {
              "title": "group1Question3Choice3",
            },
            "value": "group1Question3Choice3",
          },
        ],
        "currentAnswer": Array [],
        "disabled": false,
        "error": undefined,
        "id": "group1Question3",
        "type": "multiple",
        "ui": Object {
          "title": "group1Question3",
        },
        "validatedAnswer": Array [],
        "validating": false,
      },
    ],
    "ui": Object {},
  },
]
`;

exports[`Basic No Default Answers getValidatedAnswers 1`] = `
Object {
  "group1Question3": Array [],
}
`;

exports[`Basic With Default Answers getConfigs 1`] = `
Array [
  Object {
    "defaultDisabled": false,
    "groups": Array [
      Object {
        "defaultDisabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "defaultAnswer": "subGroup1Question1Answer",
            "defaultDisabled": false,
            "id": "subGroup1Question1",
            "type": "any",
            "ui": Object {
              "title": "subGroup1Questions",
            },
            "validation": Object {},
            "validators": Array [
              "notNull",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice1",
                "onSelected": Object {
                  "enable": Array [
                    "subGroup1Question3",
                  ],
                },
                "ui": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice2",
                "onSelected": Object {
                  "disable": Array [
                    "subGroup1Question4",
                  ],
                },
                "ui": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "value": "subGroup1Question2Choice3",
              },
            ],
            "defaultAnswer": "subGroup1Question2Choice1",
            "defaultDisabled": false,
            "id": "subGroup1Question2",
            "type": "single",
            "ui": Object {
              "title": "subGroup1Question2",
            },
            "validation": Object {},
            "validators": Array [
              "notNullSingle",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice1",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice2",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "value": "subGroup1Question3Choice3",
              },
            ],
            "defaultAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "defaultDisabled": true,
            "id": "subGroup1Question3",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validation": Object {},
            "validators": Array [
              "atLeast1",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice1",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice2",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice3",
                "onSelected": Object {},
                "ui": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "value": "subGroup1Question4Choice3",
              },
            ],
            "defaultAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "defaultDisabled": false,
            "id": "subGroup1Question4",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validation": Object {},
            "validators": Array [
              "atLeast1",
            ],
          },
        ],
        "ui": Object {},
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "defaultAnswer": "group1Question1Answer",
        "defaultDisabled": false,
        "id": "group1Question1",
        "type": "any",
        "ui": Object {
          "title": "group1Questions",
        },
        "validation": Object {},
        "validators": Array [
          "notNull",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice1",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice1",
            },
            "value": "group1Question2Choice1",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice2",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice2",
            },
            "value": "group1Question2Choice2",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question2Choice3",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question2Choice3",
            },
            "value": "group1Question2Choice3",
          },
        ],
        "defaultAnswer": "group1Question2Choice1",
        "defaultDisabled": false,
        "id": "group1Question2",
        "type": "single",
        "ui": Object {
          "title": "group1Question2",
        },
        "validation": Object {},
        "validators": Array [
          "notNullSingle",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice1",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice1",
            },
            "value": "group1Question3Choice1",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice2",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice2",
            },
            "value": "group1Question3Choice2",
          },
          Object {
            "defaultDisabled": false,
            "id": "group1Question3Choice3",
            "onSelected": Object {},
            "ui": Object {
              "title": "group1Question3Choice3",
            },
            "value": "group1Question3Choice3",
          },
        ],
        "defaultAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "defaultDisabled": false,
        "id": "group1Question3",
        "type": "multiple",
        "ui": Object {
          "title": "group1Question3",
        },
        "validation": Object {},
        "validators": Array [],
      },
    ],
    "ui": Object {},
  },
]
`;

exports[`Basic With Default Answers getCurrentAnswers 1`] = `
Object {
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": Array [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": Array [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": Array [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
}
`;

exports[`Basic With Default Answers getErrors 1`] = `Object {}`;

exports[`Basic With Default Answers getRenderInstructions 1`] = `
Array [
  Object {
    "disabled": false,
    "groups": Array [
      Object {
        "disabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "currentAnswer": "subGroup1Question1Answer",
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question1",
            "type": "any",
            "ui": Object {
              "title": "subGroup1Questions",
            },
            "validatedAnswer": "subGroup1Question1Answer",
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice1",
                "ui": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice2",
                "ui": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question2Choice3",
                "ui": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "value": "subGroup1Question2Choice3",
              },
            ],
            "currentAnswer": "subGroup1Question2Choice1",
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question2",
            "type": "single",
            "ui": Object {
              "title": "subGroup1Question2",
            },
            "validatedAnswer": "subGroup1Question2Choice1",
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": false,
                "id": "subGroup1Question3Choice1",
                "ui": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question3Choice2",
                "ui": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question3Choice3",
                "ui": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "value": "subGroup1Question3Choice3",
              },
            ],
            "currentAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question3",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validatedAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice1",
                "ui": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice2",
                "ui": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "disabled": false,
                "id": "subGroup1Question4Choice3",
                "ui": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "value": "subGroup1Question4Choice3",
              },
            ],
            "currentAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question4",
            "type": "multiple",
            "ui": Object {
              "title": "subGroup1Question3",
            },
            "validatedAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "validating": false,
          },
        ],
        "ui": Object {},
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "currentAnswer": "group1Question1Answer",
        "disabled": false,
        "error": undefined,
        "id": "group1Question1",
        "type": "any",
        "ui": Object {
          "title": "group1Questions",
        },
        "validatedAnswer": "group1Question1Answer",
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "disabled": false,
            "id": "group1Question2Choice1",
            "ui": Object {
              "title": "group1Question2Choice1",
            },
            "value": "group1Question2Choice1",
          },
          Object {
            "disabled": false,
            "id": "group1Question2Choice2",
            "ui": Object {
              "title": "group1Question2Choice2",
            },
            "value": "group1Question2Choice2",
          },
          Object {
            "disabled": false,
            "id": "group1Question2Choice3",
            "ui": Object {
              "title": "group1Question2Choice3",
            },
            "value": "group1Question2Choice3",
          },
        ],
        "currentAnswer": "group1Question2Choice1",
        "disabled": false,
        "error": undefined,
        "id": "group1Question2",
        "type": "single",
        "ui": Object {
          "title": "group1Question2",
        },
        "validatedAnswer": "group1Question2Choice1",
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "disabled": false,
            "id": "group1Question3Choice1",
            "ui": Object {
              "title": "group1Question3Choice1",
            },
            "value": "group1Question3Choice1",
          },
          Object {
            "disabled": false,
            "id": "group1Question3Choice2",
            "ui": Object {
              "title": "group1Question3Choice2",
            },
            "value": "group1Question3Choice2",
          },
          Object {
            "disabled": false,
            "id": "group1Question3Choice3",
            "ui": Object {
              "title": "group1Question3Choice3",
            },
            "value": "group1Question3Choice3",
          },
        ],
        "currentAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "disabled": false,
        "error": undefined,
        "id": "group1Question3",
        "type": "multiple",
        "ui": Object {
          "title": "group1Question3",
        },
        "validatedAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "validating": false,
      },
    ],
    "ui": Object {},
  },
]
`;

exports[`Basic With Default Answers getValidatedAnswers 1`] = `
Object {
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": Array [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": Array [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": Array [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
}
`;
